unify return value builder